samples/_failures_safe/1761173905_5de190_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f78518c6.c: In function ‘main’:
./samples/SAFE/__tmp_f78518c6.c:154:17: error: expected expression at end of input
  154 |                 } else if (
      |                 ^
./samples/SAFE/__tmp_f78518c6.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f78518c6.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f78518c6.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f78518c6.c:154:17: error: expected declaration or statement at end of input
